--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,17 @@
 main {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  height: 100vh;
+  width: 100vw;
+}
+
+h1 {
+  font-size: 7em;
+}
+
+h2 {
+  font-size: 4em;
 }
